--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -23,16 +23,18 @@
   <div class="gamesLine">
     <!--Jeu 1-->
     <figure>
-      <a href="https://www.amazon.fr/Square-Enix-SQEA27-UK-22ST-Just-Cause/dp/B07DNY1KPK/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=just+cause+4&qid=1556021586&s=videogames&sr=1-2" target="_blank"> <img
-          src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+      <a href="#" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81rn%2BBE85JL._AC_SL1500_.jpg" alt="CoD MW" class="game" /></a>
       <figcaption>
-        Just cause 4
+        CoD : Modern Warfare
       </figcaption>
       <figcaption>
-        28,49€ sur Amazon
+        Précommande
       </figcaption>
       <figcaption>
-        34,99€ sur PlayStation
+        69,99€ sur PlayStation
+      </figcaption>
+      <figcaption>
+        Sortie le 25/10/19
       </figcaption>
     </figure>
 
@@ -129,16 +131,15 @@
 
     <!--Jeu 8-->
     <figure>
-      <a href="https://www.amazon.fr/Sony-Death-Stranding/dp/B01H1OOU8K/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=death+stranding&qid=1559171188&s=gateway&sr=8-1"
-        target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71deJ-FfN2L._AC_SL1500_.jpg" alt="Death Stranding" class="game" /></a>
+      <a href="#" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71deJ-FfN2L._AC_SL1500_.jpg" alt="Death Stranding" class="game" /></a>
       <figcaption>
         Death Stranding
       </figcaption>
       <figcaption>
-        69,90€ sur Amazon
+        Précommande
       </figcaption>
       <figcaption>
-        ???€ sur PlayStation
+        69,99€ sur PlayStation
       </figcaption>
       <figcaption>
         Sortie le 08/11/19
@@ -146,21 +147,25 @@
     </figure>
   </div>
 
-  <!--
+
 
   <div class="gamesLine">
-    Jeu 9
+    <!--Jeu 9-->
     <figure>
-      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+      <a href="https://www.amazon.fr/Square-Enix-SQEA27-UK-22ST-Just-Cause/dp/B07DNY1KPK/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=just+cause+4&qid=1556021586&s=videogames&sr=1-2" target="_blank"> <img
+          src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
       <figcaption>
         Just cause 4
       </figcaption>
       <figcaption>
-        28,97€
+        28,49€ sur Amazon
+      </figcaption>
+      <figcaption>
+        34,99€ sur PlayStation
       </figcaption>
     </figure>
--->
-  <!--Jeu 10
+
+    <!--Jeu 10
   <figure>
     <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
     <figcaption>
@@ -171,7 +176,7 @@
     </figcaption>
   </figure>
 -->
-  <!--Jeu 11
+    <!--Jeu 11
   <figure>
     <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
     <figcaption>
@@ -182,7 +187,7 @@
     </figcaption>
   </figure>
 -->
-  <!--Jeu 12
+    <!--Jeu 12
   <figure>
     <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
     <figcaption>
@@ -194,7 +199,7 @@
   </figure>
   </div>
 -->
-  <!--  <div class="gamesLine">
+    <!--  <div class="gamesLine">
 Jeu 13
 <figure>
   <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
@@ -206,7 +211,7 @@ Jeu 13
   </figcaption>
 </figure>
 -->
-  <!--Jeu 14
+    <!--Jeu 14
   <figure>
     <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
     <figcaption>
@@ -217,7 +222,7 @@ Jeu 13
     </figcaption>
   </figure>
 -->
-  <!--Jeu 15
+    <!--Jeu 15
   <figure>
     <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
     <figcaption>
@@ -228,7 +233,7 @@ Jeu 13
     </figcaption>
   </figure>
 -->
-  <!--Jeu 16
+    <!--Jeu 16
   <figure>
     <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
     <figcaption>
@@ -240,8 +245,8 @@ Jeu 13
   </figure>
   </div>
 -->
-  <!--<div class="gamesLine">-->
-  <!--Jeu 17
+    <!--<div class="gamesLine">-->
+    <!--Jeu 17
   <figure>
     <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
     <figcaption>
@@ -252,7 +257,7 @@ Jeu 13
     </figcaption>
   </figure>
 -->
-  <!--Jeu 18
+    <!--Jeu 18
   <figure>
     <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
     <figcaption>
@@ -264,7 +269,7 @@ Jeu 13
   </figure>
   -->
 
-  <!--Jeu 19
+    <!--Jeu 19
   <figure>
     <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
     <figcaption>
@@ -275,7 +280,7 @@ Jeu 13
     </figcaption>
   </figure>
 -->
-  <!--Jeu 20
+    <!--Jeu 20
   <figure>
     <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
     <figcaption>
