--- a/autres.html
+++ b/autres.html
@@ -287,8 +287,471 @@
         28,97€
       </figcaption>
     </figure>
-    -->
-  </div>
+
+  </div>  -->
+
+  <div class="othersLine">
+    <!--Autres 21
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+-->
+    <!--Autres 22
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+-->
+    <!--Autres 23
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+-->
+    <!--Autres 24
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+
+  </div>  -->
+
+  <div class="othersLine">
+    <!--Autres 25
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+-->
+    <!--Autres 26
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+-->
+    <!--Autres 27
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+-->
+    <!--Autres 28
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+
+  </div>  -->
+  <div class="othersLine">
+    <!--Autres 29
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+-->
+    <!--Autres 30
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+-->
+    <!--Autres 31
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+-->
+    <!--Autres 32
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+
+  </div>  -->
+  <div class="othersLine">
+    <!--Autres 33
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+-->
+    <!--Autres 34
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+-->
+    <!--Autres 35
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+-->
+    <!--Autres 36
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+
+  </div>  -->
+  <div class="othersLine">
+    <!--Autres 37
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+-->
+    <!--Autres 38
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+-->
+    <!--Autres 39
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+-->
+    <!--Autres 40
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+
+  </div>  -->
+  <div class="othersLine">
+    <!--Autres 41
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+-->
+    <!--Autres 42
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+-->
+    <!--Autres 43
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+-->
+    <!--Autres 44
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+
+  </div>  -->
+  <div class="othersLine">
+    <!--Autres 45
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+-->
+    <!--Autres 46
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+-->
+    <!--Autres 47
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+-->
+    <!--Autres 48
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+
+  </div>  -->
+  <div class="othersLine">
+    <!--Autres 49
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+-->
+    <!--Autres 50
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+-->
+    <!--Autres 51
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+-->
+    <!--Autres 52
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+
+  </div>  -->
+  <div class="othersLine">
+    <!--Autres 53
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+-->
+    <!--Autres 54
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+-->
+    <!--Autres 55
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+-->
+    <!--Autres 56
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+
+  </div>  -->
+  <div class="othersLine">
+    <!--Autres 57
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+-->
+    <!--Autres 58
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+-->
+    <!--Autres 59
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+-->
+    <!--Autres 60
+    <figure>
+      <a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="others" /></a>
+      <figcaption>
+        Just cause 4
+      </figcaption>
+      <figcaption>
+        28,97€
+      </figcaption>
+    </figure>
+
+  </div>  -->
+
 
 </body>
 
