--- a/jeuxvideo.html
+++ b/jeuxvideo.html
@@ -293,6 +293,246 @@ Jeu 13
   </div>
 -->
 
+<!--<div class="gamesLine">-->
+<!--Jeu 21
+<figure>
+<a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+<figcaption>
+  Just cause 4
+</figcaption>
+<figcaption>
+  28,97€
+</figcaption>
+</figure>
+-->
+<!--Jeu 22
+<figure>
+<a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+<figcaption>
+  Just cause 4
+</figcaption>
+<figcaption>
+  28,97€
+</figcaption>
+</figure>
+-->
+
+<!--Jeu 23
+<figure>
+<a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+<figcaption>
+  Just cause 4
+</figcaption>
+<figcaption>
+  28,97€
+</figcaption>
+</figure>
+-->
+<!--Jeu 24
+<figure>
+<a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+<figcaption>
+  Just cause 4
+</figcaption>
+<figcaption>
+  28,97€
+</figcaption>
+</figure>
+</div>
+-->
+
+<!--<div class="gamesLine">-->
+<!--Jeu 25
+<figure>
+<a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+<figcaption>
+  Just cause 4
+</figcaption>
+<figcaption>
+  28,97€
+</figcaption>
+</figure>
+-->
+<!--Jeu 26
+<figure>
+<a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+<figcaption>
+  Just cause 4
+</figcaption>
+<figcaption>
+  28,97€
+</figcaption>
+</figure>
+-->
+
+<!--Jeu 27
+<figure>
+<a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+<figcaption>
+  Just cause 4
+</figcaption>
+<figcaption>
+  28,97€
+</figcaption>
+</figure>
+-->
+<!--Jeu 28
+<figure>
+<a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+<figcaption>
+  Just cause 4
+</figcaption>
+<figcaption>
+  28,97€
+</figcaption>
+</figure>
+</div>
+-->
+
+<!--<div class="gamesLine">-->
+<!--Jeu 29
+<figure>
+<a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+<figcaption>
+  Just cause 4
+</figcaption>
+<figcaption>
+  28,97€
+</figcaption>
+</figure>
+-->
+<!--Jeu 30
+<figure>
+<a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+<figcaption>
+  Just cause 4
+</figcaption>
+<figcaption>
+  28,97€
+</figcaption>
+</figure>
+-->
+
+<!--Jeu 31
+<figure>
+<a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+<figcaption>
+  Just cause 4
+</figcaption>
+<figcaption>
+  28,97€
+</figcaption>
+</figure>
+-->
+<!--Jeu 32
+<figure>
+<a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+<figcaption>
+  Just cause 4
+</figcaption>
+<figcaption>
+  28,97€
+</figcaption>
+</figure>
+</div>
+-->
+
+<!--<div class="gamesLine">-->
+<!--Jeu 33
+<figure>
+<a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+<figcaption>
+  Just cause 4
+</figcaption>
+<figcaption>
+  28,97€
+</figcaption>
+</figure>
+-->
+<!--Jeu 34
+<figure>
+<a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+<figcaption>
+  Just cause 4
+</figcaption>
+<figcaption>
+  28,97€
+</figcaption>
+</figure>
+-->
+
+<!--Jeu 35
+<figure>
+<a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+<figcaption>
+  Just cause 4
+</figcaption>
+<figcaption>
+  28,97€
+</figcaption>
+</figure>
+-->
+<!--Jeu 36
+<figure>
+<a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+<figcaption>
+  Just cause 4
+</figcaption>
+<figcaption>
+  28,97€
+</figcaption>
+</figure>
+</div>
+-->
+
+<!--<div class="gamesLine">-->
+<!--Jeu 37
+<figure>
+<a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+<figcaption>
+  Just cause 4
+</figcaption>
+<figcaption>
+  28,97€
+</figcaption>
+</figure>
+-->
+<!--Jeu 38
+<figure>
+<a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+<figcaption>
+  Just cause 4
+</figcaption>
+<figcaption>
+  28,97€
+</figcaption>
+</figure>
+-->
+
+<!--Jeu 39
+<figure>
+<a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+<figcaption>
+  Just cause 4
+</figcaption>
+<figcaption>
+  28,97€
+</figcaption>
+</figure>
+-->
+<!--Jeu 40
+<figure>
+<a href="https://www.amazon.fr/Square-Enix-5021290081970-Just-Cause/dp/B07DQXL993" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/91eKBnAUOKL._SL1500_.jpg" alt="Just Cause 4" class="game" /></a>
+<figcaption>
+  Just cause 4
+</figcaption>
+<figcaption>
+  28,97€
+</figcaption>
+</figure>
+</div>
+-->
+
 </body>
 
 </html>
