--- a/livres.html
+++ b/livres.html
@@ -408,7 +408,7 @@
   </div>
 
   <div class="booksLine">
-    <!--Livre 25
+    <!--Livre 25-->
     <figure>
       <a href="https://www.amazon.fr/Retour-%C3%A0-Birkenau-Ginette-Kolinka/dp/2246820707?ref_=Oct_NReleaseC_301061_6&pf_rd_r=4DW69VZ12YWBZ8SAMD7G&pf_rd_p=e5b0b4bf-eca8-52d1-8616-3e2c263b1a1e&pf_rd_s=merchandised-search-8&pf_rd_t=101&pf_rd_i=301061&pf_rd_m=A1X6FK5RDHNB96"
         target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71Jq5smX3LL.jpg" alt="Retour à Birkenau" class="books" /></a>
@@ -421,7 +421,7 @@
       <figcaption>
         13,00€
       </figcaption>
-    </figure>-->
+    </figure>
 
     <!--Livre 26
     <figure>
@@ -592,6 +592,384 @@ Livre 33
       </figcaption>
     </figure>
   </div>
+-->
+
+<!--  <div class="booksLine">
+Livre 37
+  <figure>
+    <a href="https://www.amazon.fr/Tendre-est-nuit-Scott-Fitzgerald/dp/2253052299/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=fitzgerald&qid=1555427512&s=gateway&sr=8-2" target="_blank"> <img
+        src="https://images-na.ssl-images-amazon.com/images/I/517sBNNkPyL.jpg" alt="Tendre Est La Nuit" class="books" /></a>
+    <figcaption>
+      Francis Scott Fitzgerald
+    </figcaption>
+    <figcaption>
+      Tendre est la nuit
+    </figcaption>
+    <figcaption>
+      7,20€
+    </figcaption>
+  </figure>
+  -->
+
+<!--Livre 38
+  <figure>
+    <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
+    <figcaption>
+      Saphia Azzeddine
+    </figcaption>
+    <figcaption>
+      Combien veux-tu m'épouser ?
+    </figcaption>
+    <figcaption>
+      17,90€
+    </figcaption>
+  </figure>
+  -->
+
+<!--Livre 39
+  <figure>
+    <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
+    <figcaption>
+      Saphia Azzeddine
+    </figcaption>
+    <figcaption>
+      Bilqiss
+    </figcaption>
+    <figcaption>
+      18,00€
+    </figcaption>
+  </figure>
+-->
+
+<!--Livre 40
+  <figure>
+    <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
+    <figcaption>
+      Saphia Azzeddine
+    </figcaption>
+    <figcaption>
+      Sa mère
+    </figcaption>
+    <figcaption>
+      19,00€
+    </figcaption>
+  </figure>
+</div>
+-->
+
+<!--  <div class="booksLine">
+Livre 41
+  <figure>
+    <a href="https://www.amazon.fr/Tendre-est-nuit-Scott-Fitzgerald/dp/2253052299/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=fitzgerald&qid=1555427512&s=gateway&sr=8-2" target="_blank"> <img
+        src="https://images-na.ssl-images-amazon.com/images/I/517sBNNkPyL.jpg" alt="Tendre Est La Nuit" class="books" /></a>
+    <figcaption>
+      Francis Scott Fitzgerald
+    </figcaption>
+    <figcaption>
+      Tendre est la nuit
+    </figcaption>
+    <figcaption>
+      7,20€
+    </figcaption>
+  </figure>
+  -->
+
+<!--Livre 42
+  <figure>
+    <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
+    <figcaption>
+      Saphia Azzeddine
+    </figcaption>
+    <figcaption>
+      Combien veux-tu m'épouser ?
+    </figcaption>
+    <figcaption>
+      17,90€
+    </figcaption>
+  </figure>
+  -->
+
+<!--Livre 43
+  <figure>
+    <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
+    <figcaption>
+      Saphia Azzeddine
+    </figcaption>
+    <figcaption>
+      Bilqiss
+    </figcaption>
+    <figcaption>
+      18,00€
+    </figcaption>
+  </figure>
+-->
+
+<!--Livre 44
+  <figure>
+    <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
+    <figcaption>
+      Saphia Azzeddine
+    </figcaption>
+    <figcaption>
+      Sa mère
+    </figcaption>
+    <figcaption>
+      19,00€
+    </figcaption>
+  </figure>
+</div>
+-->
+
+<!--  <div class="booksLine">
+Livre 45
+  <figure>
+    <a href="https://www.amazon.fr/Tendre-est-nuit-Scott-Fitzgerald/dp/2253052299/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=fitzgerald&qid=1555427512&s=gateway&sr=8-2" target="_blank"> <img
+        src="https://images-na.ssl-images-amazon.com/images/I/517sBNNkPyL.jpg" alt="Tendre Est La Nuit" class="books" /></a>
+    <figcaption>
+      Francis Scott Fitzgerald
+    </figcaption>
+    <figcaption>
+      Tendre est la nuit
+    </figcaption>
+    <figcaption>
+      7,20€
+    </figcaption>
+  </figure>
+  -->
+
+<!--Livre 46
+  <figure>
+    <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
+    <figcaption>
+      Saphia Azzeddine
+    </figcaption>
+    <figcaption>
+      Combien veux-tu m'épouser ?
+    </figcaption>
+    <figcaption>
+      17,90€
+    </figcaption>
+  </figure>
+  -->
+
+<!--Livre 47
+  <figure>
+    <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
+    <figcaption>
+      Saphia Azzeddine
+    </figcaption>
+    <figcaption>
+      Bilqiss
+    </figcaption>
+    <figcaption>
+      18,00€
+    </figcaption>
+  </figure>
+-->
+
+<!--Livre 48
+  <figure>
+    <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
+    <figcaption>
+      Saphia Azzeddine
+    </figcaption>
+    <figcaption>
+      Sa mère
+    </figcaption>
+    <figcaption>
+      19,00€
+    </figcaption>
+  </figure>
+</div>
+-->
+
+<!--  <div class="booksLine">
+Livre 49
+  <figure>
+    <a href="https://www.amazon.fr/Tendre-est-nuit-Scott-Fitzgerald/dp/2253052299/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=fitzgerald&qid=1555427512&s=gateway&sr=8-2" target="_blank"> <img
+        src="https://images-na.ssl-images-amazon.com/images/I/517sBNNkPyL.jpg" alt="Tendre Est La Nuit" class="books" /></a>
+    <figcaption>
+      Francis Scott Fitzgerald
+    </figcaption>
+    <figcaption>
+      Tendre est la nuit
+    </figcaption>
+    <figcaption>
+      7,20€
+    </figcaption>
+  </figure>
+  -->
+
+<!--Livre 50
+  <figure>
+    <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
+    <figcaption>
+      Saphia Azzeddine
+    </figcaption>
+    <figcaption>
+      Combien veux-tu m'épouser ?
+    </figcaption>
+    <figcaption>
+      17,90€
+    </figcaption>
+  </figure>
+  -->
+
+<!--Livre 51
+  <figure>
+    <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
+    <figcaption>
+      Saphia Azzeddine
+    </figcaption>
+    <figcaption>
+      Bilqiss
+    </figcaption>
+    <figcaption>
+      18,00€
+    </figcaption>
+  </figure>
+-->
+
+<!--Livre 52
+  <figure>
+    <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
+    <figcaption>
+      Saphia Azzeddine
+    </figcaption>
+    <figcaption>
+      Sa mère
+    </figcaption>
+    <figcaption>
+      19,00€
+    </figcaption>
+  </figure>
+</div>
+-->
+
+<!--  <div class="booksLine">
+Livre 53
+  <figure>
+    <a href="https://www.amazon.fr/Tendre-est-nuit-Scott-Fitzgerald/dp/2253052299/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=fitzgerald&qid=1555427512&s=gateway&sr=8-2" target="_blank"> <img
+        src="https://images-na.ssl-images-amazon.com/images/I/517sBNNkPyL.jpg" alt="Tendre Est La Nuit" class="books" /></a>
+    <figcaption>
+      Francis Scott Fitzgerald
+    </figcaption>
+    <figcaption>
+      Tendre est la nuit
+    </figcaption>
+    <figcaption>
+      7,20€
+    </figcaption>
+  </figure>
+  -->
+
+<!--Livre 54
+  <figure>
+    <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
+    <figcaption>
+      Saphia Azzeddine
+    </figcaption>
+    <figcaption>
+      Combien veux-tu m'épouser ?
+    </figcaption>
+    <figcaption>
+      17,90€
+    </figcaption>
+  </figure>
+  -->
+
+<!--Livre 55
+  <figure>
+    <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
+    <figcaption>
+      Saphia Azzeddine
+    </figcaption>
+    <figcaption>
+      Bilqiss
+    </figcaption>
+    <figcaption>
+      18,00€
+    </figcaption>
+  </figure>
+-->
+
+<!--Livre 56
+  <figure>
+    <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
+    <figcaption>
+      Saphia Azzeddine
+    </figcaption>
+    <figcaption>
+      Sa mère
+    </figcaption>
+    <figcaption>
+      19,00€
+    </figcaption>
+  </figure>
+</div>
+-->
+
+<!--  <div class="booksLine">
+Livre 57
+  <figure>
+    <a href="https://www.amazon.fr/Tendre-est-nuit-Scott-Fitzgerald/dp/2253052299/ref=sr_1_2?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&keywords=fitzgerald&qid=1555427512&s=gateway&sr=8-2" target="_blank"> <img
+        src="https://images-na.ssl-images-amazon.com/images/I/517sBNNkPyL.jpg" alt="Tendre Est La Nuit" class="books" /></a>
+    <figcaption>
+      Francis Scott Fitzgerald
+    </figcaption>
+    <figcaption>
+      Tendre est la nuit
+    </figcaption>
+    <figcaption>
+      7,20€
+    </figcaption>
+  </figure>
+  -->
+
+<!--Livre 58
+  <figure>
+    <a href="https://www.amazon.fr/Combien-veux-tu-m%C3%A9pouser-Saphia-Azzeddine/dp/224680437X/ref=sr_1_5?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-5" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81RVBB8f9sL.jpg" alt="Combien veux-tu m'épouser ?" class="books" /></a>
+    <figcaption>
+      Saphia Azzeddine
+    </figcaption>
+    <figcaption>
+      Combien veux-tu m'épouser ?
+    </figcaption>
+    <figcaption>
+      17,90€
+    </figcaption>
+  </figure>
+  -->
+
+<!--Livre 59
+  <figure>
+    <a href="https://www.amazon.fr/Bilqiss-Saphia-Azzeddine/dp/2234077966/ref=tmm_pap_swatch_0?_encoding=UTF8&qid=1555434157&sr=1-2" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/81eyYcanNOL.jpg" alt="Bilqiss" class="books" /></a>
+    <figcaption>
+      Saphia Azzeddine
+    </figcaption>
+    <figcaption>
+      Bilqiss
+    </figcaption>
+    <figcaption>
+      18,00€
+    </figcaption>
+  </figure>
+-->
+
+<!--Livre 60
+  <figure>
+    <a href="https://www.amazon.fr/Sa-m%C3%A8re-Saphia-Azzeddine/dp/2234081742/ref=sr_1_1?__mk_fr_FR=%C3%85M%C3%85%C5%BD%C3%95%C3%91&crid=21YE9DCQE776X&keywords=saphia+azzeddine&qid=1555434157&s=books&sprefix=saphi%2Cstripbooks%2C135&sr=1-1" target="_blank"> <img src="https://images-na.ssl-images-amazon.com/images/I/71vCBTDzN5L.jpg" alt="Sa Mère" class="books" /></a>
+    <figcaption>
+      Saphia Azzeddine
+    </figcaption>
+    <figcaption>
+      Sa mère
+    </figcaption>
+    <figcaption>
+      19,00€
+    </figcaption>
+  </figure>
+</div>
 -->
 
 </body>
