--- a/index.html
+++ b/index.html
@@ -29,7 +29,10 @@
   </div>
 
   <p class="dateMAJ">
-    Mise à jour le 03 juin 2019
+    Mise à jour liste le 05 juin 2019
+  </p>
+  <p class="dateMAJ2">
+    Mise à jour prix le 02 juin 2019
   </p>
 
 </body>
